--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/pnda.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/pnda.png" />
 
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Pandaswap Interface</title>
+    <title>UFO Money Swap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
